fix : adjust parralax container size on mobile

--- a/src/app/styles/ParallaxImage.scss
+++ b/src/app/styles/ParallaxImage.scss
@@ -18,7 +18,7 @@
 
 @media ( max-width : 640px ){
     .parallax__container{
-        height: 150px;
+        height: 41vw;
     
         &-img{
 
